Optimized asset loading and fixed asset flickering

--- a/static/TheProject.css
+++ b/static/TheProject.css
@@ -93,7 +93,7 @@ hr {
 
 #gameCamera {
 	overflow: hidden;
-    border:3px solid black;
+    border:3px solid white;
     padding-left: 5px;
     padding-right: 5px;
     margin: auto;
